chainsaw/tests/pod-with-no-labels-at-all/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
  terminationGracePeriodSeconds: 0
